Fixed Overflow Image

--- a/src/components/menu-item/menu-items.style.scss
+++ b/src/components/menu-item/menu-items.style.scss
@@ -9,6 +9,17 @@
   margin: 0 7.5px 15px;
   background-position: center;
   background-size: cover;
+  overflow: hidden;
+  &:hover {
+    cursor: pointer;
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+    & .content {
+      opacity: 0.8;
+    }
+  }
   &.large {
     height: 380px;
   }
